<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_fav_drink"
            android:icon="@drawable/ic_favorite_black_24dp"
            android:title="@string/favorites" />

        <item
            android:id="@+id/nav_nearby_store"
            android:icon="@drawable/ic_store_black_24dp"
            android:title="@string/nearby_store" />

        <item
            android:id="@+id/nav_orders"
            android:icon="@drawable/ic_attach_money_black_24dp"
            android:title="@string/yours_orders" />

        <item
            android:id="@+id/nav_sign_out"
            android:icon="@drawable/ic_exit_to_app_black_24dp"
            android:title="@string/sign_out" />

    </group>


</menu>
