<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <com.rengwuxian.materialedittext.MaterialEditText
        android:id="@+id/editTextName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:ellipsize="end"
        android:ems="10"
        android:fontFamily="@font/nunito_sans"
        android:hint="@string/name"
        android:inputType="textPersonName"
        android:maxLines="1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:met_baseColor="@color/colorPrimaryDark"
        app:met_floatingLabel="highlight"
        app:met_floatingLabelTextColor="@color/colorAccent"
        app:met_primaryColor="@color/colorPrimaryDark"
        app:met_textColor="@color/colorTextPrimary"
        tools:text="" />

    <com.rengwuxian.materialedittext.MaterialEditText
        android:id="@+id/editTextBirthday"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:ellipsize="end"
        android:ems="10"
        android:fontFamily="@font/nunito_sans"
        android:hint="@string/birthday"
        android:inputType="date"
        android:maxLines="1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextName"
        app:met_baseColor="@color/colorPrimaryDark"
        app:met_floatingLabel="highlight"
        app:met_floatingLabelTextColor="@color/colorAccent"
        app:met_primaryColor="@color/colorPrimaryDark"
        app:met_textColor="@color/colorTextPrimary"
        tools:text="1998-10-08" />

    <com.rengwuxian.materialedittext.MaterialEditText
        android:id="@+id/editTextAddress"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:ellipsize="end"
        android:ems="10"
        android:fontFamily="@font/nunito_sans"
        android:hint="@string/address"
        android:inputType="textPersonName"
        android:maxLines="1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextBirthday"
        app:met_baseColor="@color/colorPrimaryDark"
        app:met_floatingLabel="highlight"
        app:met_floatingLabelTextColor="@color/colorAccent"
        app:met_primaryColor="@color/colorPrimaryDark"
        app:met_textColor="@color/colorTextPrimary"
        tools:text="Quang Tri" />

    <Button
        android:id="@+id/buttonRegister"
        style="@style/Base.TextAppearance.AppCompat.Widget.Button.Borderless.Colored"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:backgroundTint="@color/colorPrimary"
        android:padding="16sp"
        android:text="@string/register"
        android:textAllCaps="false"
        android:textColor="@color/colorTextPrimary"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextAddress" />
</android.support.constraint.ConstraintLayout>